fix slidebar bug on ie

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -340,9 +340,9 @@ body.home #navWrap {
   font-size: 1.2em;
 }
 
-#topicnav{color:#569701;cursor:pointer}
+#topicnav{color:#569701;cursor:pointer;display:block}
 
-#slidebar{position:absolute;display:none}
+#slidebar{position:absolute;display:none;-top:30px;-margin-left:-80px;width:76px;}
 .slidenav{padding:1px 9px;
 display:block;
 font-size:14px;
